@@ -1,9 +1,8 @@
 plugins {
-    id("net.ltgt.errorprone") version "2.0.1"
+    id("net.ltgt.errorprone") version "3.0.1"
 }
 
 apply plugin: 'java'
-apply plugin: 'maven'
 
 repositories {
     mavenLocal()
@@ -13,22 +12,34 @@ repositories {
 group = 'com.google.code.gson'
 version = '2.8.6-SNAPSHOT'
 
-sourceCompatibility = 1.6
-targetCompatibility = 1.6
+sourceCompatibility = 1.17
+targetCompatibility = 1.17
 
 sourceSets.main.java.exclude("**/module-info.java")
 dependencies {
-    testCompile "junit:junit:4.12"
+    testImplementation "junit:junit:4.12"
 
+    annotationProcessor "com.uber.nullaway:nullaway:0.12.4-SNAPSHOT"
+    annotationProcessor "edu.ucr.cs.riple.annotator:annotator-scanner:1.3.16-SNAPSHOT"
+    implementation "edu.ucr.cs.riple.annotator:annotation-util:1.3.16-SNAPSHOT"
     compileOnly "com.google.code.findbugs:jsr305:3.0.2"
-    errorprone "com.google.errorprone:error_prone_core:2.3.2"
+    errorprone "com.google.errorprone:error_prone_core:2.35.1"
     errorproneJavac "com.google.errorprone:javac:9+181-r4173-1"
-
-    annotationProcessor "com.uber.nullaway:nullaway:0.10.8"
-    annotationProcessor "edu.ucr.cs.riple.annotator:annotator-scanner:1.3.6-alpha-5"
+    compileOnly "com.uber.nullaway:nullaway-annotations:0.12.4-SNAPSHOT"
 }
 
-
+tasks.withType(JavaCompile).configureEach {
+    options.compilerArgs += [
+        '--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED',
+        '--add-exports=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED'
+    ]
+}
+def scanner_path = project.rootProject.projectDir.toString() + "/annotator-out/scanner.xml"
+def nullaway_path = project.rootProject.projectDir.toString() + "/annotator-out/nullaway.xml"
 import net.ltgt.gradle.errorprone.CheckSeverity
 tasks.withType(JavaCompile) {
     // remove the if condition if you want to run NullAway on test code
@@ -39,9 +50,10 @@ tasks.withType(JavaCompile) {
             check("AnnotatorScanner", CheckSeverity.ERROR)
             option("NullAway:AnnotatedPackages", "com.google.gson")
             option("NullAway:SerializeFixMetadata", "true")
-            option("NullAway:FixSerializationConfigPath", "/tmp/annotator/checker.xml")
-            option("AnnotatorScanner:ConfigPath", "/tmp/annotator/scanner.xml")
+            option("NullAway:FixSerializationConfigPath", nullaway_path)
+            option("AnnotatorScanner:ConfigPath", scanner_path)
         }
         options.compilerArgs << "-Xmaxerrs" << "100000"
+        options.compilerArgs << "-Xmaxwarns" << "100000"
     }
 }
